--- a/UtlsLogTool/index.html
+++ b/UtlsLogTool/index.html
@@ -1,14 +1,15 @@
 <html>
-    <head>
-        <title>User-transaction logs</title>
-        <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.min.css">
-        <link rel="stylesheet" href="app/app.component.css">
-    </head>
-    <body class="utls">
-        <my-app>Loading...</my-app>
+<head>
+    <title>User-transaction logs</title>
+    <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.min.css">
+    <link rel="stylesheet" href="app/app.component.css">
+</head>
+<body class="utls">
+<my-app>Loading...</my-app>
 
-        <script src="build/common.js"></script>
-      <script src="build/angular2.js"></script>
-      <script src="build/app.js"></script>
-    </body>
+<script src="build/common.js"></script>
+<script src="build/angular2.js"></script>
+<script src="build/app.js"></script>
+<script src="node_modules/moment/min/moment-with-locales.min.js"></script>
+</body>
 </html>
