finally fixed so change-events inside electron updates the view, removed typings and the dummy-clock
git-svn-id: svn://10.33.1.15/syseng/trunk/UserTransactionLog@8147 403474d4-8537-446f-9ecb-d9f2842470be

--- a/UtlsLogTool/index.html
+++ b/UtlsLogTool/index.html
@@ -6,10 +6,10 @@
 </head>
 <body class="utls">
 <my-app>Loading...</my-app>
-
 <script src="build/common.js"></script>
-<script src="build/angular2.js"></script>
+<!--<script src="build/angular2.js"></script>-->
 <script src="build/app.js"></script>
-<script src="node_modules/moment/min/moment-with-locales.min.js"></script>
+<script src="build/deps.js"></script>
+<!--<script src="node_modules/moment/min/moment-with-locales.min.js"></script>-->
 </body>
 </html>
