added a waiting-view while waiting for logs from utl-server and some other stuff regarding different views
git-svn-id: svn://10.33.1.15/syseng/trunk/UserTransactionLog@8280 403474d4-8537-446f-9ecb-d9f2842470be

--- a/UtlsLogTool/index.html
+++ b/UtlsLogTool/index.html
@@ -3,9 +3,11 @@
     <title>User-transaction logs</title>
     <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="app/app.component.css">
+    <link rel="stylesheet" href="app/waiting.css">
 </head>
 <body class="utls">
 <my-app>Loading...</my-app>
+
 <script src="build/common.js"></script>
 <!--<script src="build/angular2.js"></script>-->
 <script src="build/app.js"></script>
