changed layout of fetch-log view and made time-column slightly bigger
git-svn-id: svn://10.33.1.15/syseng/trunk/UserTransactionLog@8698 403474d4-8537-446f-9ecb-d9f2842470be

--- a/UtlsLogTool/index.html
+++ b/UtlsLogTool/index.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="app/waiting.css">
 </head>
 <body class="utls">
-<my-app>Loading...</my-app>
+<my-app class="utls-text">Loading...</my-app>
 
 <script src="build/common.js"></script>
 <!--<script src="build/angular2.js"></script>-->
